--- a/index.html
+++ b/index.html
@@ -254,7 +254,13 @@
         // Generate graph
         function generateGraph(qsarRisk, calculatedRisk) {
             const ctx = document.getElementById('risk-graph').getContext('2d');
-            new Chart(ctx, {
+
+            // Destroy existing chart if it exists
+            if (window.riskChart) {
+                window.riskChart.destroy();
+            }
+
+            window.riskChart = new Chart(ctx, {
                 type: 'bar',
                 data: {
                     labels: ['QSAR Predicted', 'Calculated'],
