--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <label for="ld50">LD50 of Chemical (mg/kg):</label>
                 <input type="number" id="ld50" step="any">
             </div>
-            <button id="calculate">Calculate Your Risklevel</button>
+            <button id="calculate">Calculate Your Risk Level</button>
             <div id="results">
                 <h2>Results</h2>
                 <p><strong>QSAR Predicted Risk Level:</strong> <span id="qsar-risk"></span></p>
@@ -171,7 +171,7 @@
         </div>
     </div>
     <footer>
-        <p>&copy; 2024 Science Expo - Chemical Risk Assessment in an individuals /n TEAM:MIRS /n ROHIT DHANYAA KANNAN /n RAM CHARAN</p>
+        <p>&copy; 2024 Science Expo - Chemical Risk Assessment in an individuals  TEAM:MIRS , ROHIT DHANYAA KANNAN and RAM CHARAN</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
