--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
             const qsarRisk = data.qsarRisk;
 
             // Calculate risk level
-            const calculatedRisk = (concentration * exposure / (bodyWeight+age) * ld50;
+            const calculatedRisk = (concentration * exposure / bodyWeight * ld50);
 
             // Update results
             document.getElementById('qsar-risk').textContent = qsarRisk.toFixed(4);
